2000-07-19  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Introduction): More about CVS, Gnats, the web
	pages, and the mailing lists.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Prerequisite Macros): Dedocument AC_PROVIDE.
	(Coding Style): Move some into...
	(Macro Definitions): here.

2000-07-19  Akim Demaille  <akim@epita.fr>

	The --help message should have paragraphs starting with a title,
	the options, and then optionally a small paragraph.

	* acgeneral.m4 (AC_DIVERT_ONCE): New macro.
	(HELP_VAR_END): New diversion.
	(AC_ARG_ENABLE, AC_ARG_WITH, AC_ARG_VAR): Use AC_DIVERT_ONCE.
	(AC_ARG_VAR): Follow the --help style.
	* acspecific.m4 (AC_PATH_X): Use AC_DIVERT_ONCE.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_PROG_CC): Don't require AC_PROG_F77, require
	AC_PROG_CC instead.
	From Martin Wilck.
	(AC_PROG_F77_C_O): Require AC_PROG_F77.
	Use a cache variable independent of $F77.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh: Accept --symbolic and -s.

2000-07-19  Akim Demaille  <akim@epita.fr>

	Make it clear that the regular user does not need --macrodir.
	In fact, rename this option as -A, --autoconf-dir.

	* autoconf.sh: Complain when -m, --macrodir is used.
	Accept -A, --autoconf-dir.
	Use $autoconf_dir instead of $AC_MACRODIR.
	Adjust --help.
	* autoheader.sh: Likewise.
	* autoscan.sh: Likewise.
	* autoupdate.sh: Likewise.
	Use $optarg.
	* autoreconf.sh: Likewise.
	* doc/autoconf.texi: Adjust.
	* tests: Adjust the test suite.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh: Forward --debug to sub tools.
	Let them share the same tmp dir.

2000-07-18  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_MING32): Rename as AC_MINGW32.

2000-07-18  Steven G. Johnson  <stevenj@alum.mit.edu>

	Fixed bug where the F77 compiler output was parsed differently
	when detecting the verbose flag than when scanning for linker
	options, and as a result the former test failed (under AIX/xlf).
