@@ -1,5 +1,13 @@
 2000-07-19  Akim Demaille  <akim@epita.fr>
 
+	Martin Wilck found a Fortran 77 compiler which always exits with
+	success.
+
+	* acgeneral.m4 (AC_COMPILE_IFELSE): Also check that the output
+	file was created and is nonempty.
+
+2000-07-19  Akim Demaille  <akim@epita.fr>
+
 	* doc/autoconf.texi (Introduction): More about CVS, Gnats, the web
 	pages, and the mailing lists.
 
